Adicionando tracking do rdstation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
       })(window,document,'script','dataLayer','GTM-N2HLTL');
     </script>
     <!-- End Google Tag Manager -->
+    <!-- rdstation -->
+    <script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/5df7c284-dfa4-4cd8-9e03-808a08a91ebc-loader.js"></script>    
     
     {% include header.html %}
 
